# book-rag-master

./: .gitignore  Ch05_Graphrag_DB구축.ipynb  README.md  ch01_LLM.ipynb  ch01_MEMORY.ipynb  ch01_OUTPUT_PARSERS.ipynb  ch03_MULTI_MODAL_RAG.ipynb  ch06_LANG_GRAPH.ipynb  ch06_LANG_GRAPH_CODE_ASSIST_CHATBOT.ipynb  ch06_LANG_GRAPH_CORRECTIVE_RAG.ipynb  er.name  main.py  pyproject.toml
Ch01. Langchain Basics/: ch01_2_LLM.ipynb  ch01_3_LCEL.ipynb  ch01_4_PROMPTS.ipynb  ch01_5_OUTPUT_PARSERS.ipynb  ch01_6_MEMORY.ipynb  ch01_LCEL.ipynb  ch01_LLM.ipynb  ch01_MEMORY.ipynb  ch01_OUTPUT_PARSERS.ipynb  ch01_PROMPTS.ipynb
Ch02. RAG/: _ch02_DOCUMENT_LOADER.ipynb  _ch02_LANGHAIN_EMBEDDING.ipynb  _ch02_VECTOR_SIMILARITY.ipynb  app.py  ch02_1-2_VECTOR_SIMILARITY.ipynb  ch02_1-3_LANGHAIN_EMBEDDING.ipynb  ch02_2_DOCUMENT_LOADER.ipynb  ch02_3_TEXT_SPLITTER.ipynb  ch02_4_VECTOR_DATABASE.ipynb  ch02_5_RAG_CHATBOT_with_ollama.ipynb  ch02_DOCUMENT_LOADER.ipynb  ch02_LANGHAIN_EMBEDDING.ipynb  ch02_RAG_CHATBOT.ipynb  ch02_TEXT_SPLITTER.ipynb  ch02_VECTOR_DATABASE.ipynb  ch02_VECTOR_SIMILARITY.ipynb
Ch03. MultiModal RAG/: ch03_MULTI_MODAL_RAG.ipynb
Ch04. Advanced Rag/: Ch 04_01. Recursive Character Text Splitting.ipynb  Ch 04_02. semantic chunking.ipynb  Ch 04_03. Parent child chunking.ipynb  Ch 04_04. Multiquery generation.ipynb  Ch 04_05. HyDE.ipynb  Ch 04_06. BM25.ipynb  Ch 04_07. Dense retrieval.ipynb  Ch 04_08. Ensemble retrieval.ipynb  Ch 04_09. Reranker llm.ipynb  Ch 04_10.Reranker_cross encoder.ipynb  Ch 04_11. Self rag.ipynb  Ch 04_Ensemble retrieval.ipynb  Ch 04_HyDE.ipynb  (+16 more)
(+20 files in other folders)
